--- a/termproject/src/main/res/layout/best.xml
+++ b/termproject/src/main/res/layout/best.xml
@@ -40,13 +40,12 @@
 
         </LinearLayout>
 
-    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:map="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+
+    <fragment
         android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="kr.soen.termproject.Term" />
+        class="com.google.android.gms.maps.MapFragment"
+        />
 
 </LinearLayout>
