--- a/termproject/src/main/res/layout/best.xml
+++ b/termproject/src/main/res/layout/best.xml
@@ -39,6 +39,29 @@
         android:onClick="mOnClick"/>
 
         </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+
+            android:id="@+id/store"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:text="저장"
+            android:onClick="mOnClick"
+            android:layout_width="wrap_content" />
+        <Button
+            android:id="@+id/clear"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:text="초기화"
+            android:onClick="mOnClick"
+            android:layout_width="wrap_content" />
+
+    </LinearLayout>
+
 
 
     <fragment
