--- a/termproject/src/main/res/layout/best.xml
+++ b/termproject/src/main/res/layout/best.xml
@@ -12,31 +12,28 @@
 
     <Button
         android:id="@+id/check1"
-        android:layout_width="wrap_content"
+        android:layout_weight="1"
         android:layout_height="wrap_content"
         android:text="Gps_On"
-        android:onClick="mOnClick"/>
+        android:onClick="mOnClick"
+        android:layout_width="wrap_content" />
 
-    <Button
-        android:id="@+id/check2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="스탑워치"
-        android:onClick="mOnClick"/>
 
     <Button
         android:id="@+id/check3"
-        android:layout_width="wrap_content"
+        android:layout_weight="1"
         android:layout_height="wrap_content"
         android:text="기록"
-        android:onClick="mOnClick"/>
+        android:onClick="mOnClick"
+        android:layout_width="wrap_content" />
 
     <Button
         android:id="@+id/check4"
-        android:layout_width="wrap_content"
+        android:layout_weight="1"
         android:layout_height="wrap_content"
         android:text="통계"
-        android:onClick="mOnClick"/>
+        android:onClick="mOnClick"
+        android:layout_width="wrap_content" />
 
         </LinearLayout>
     <LinearLayout
